// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Header component correctly 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="burger"
    >
      <div
        class="line1"
      />
      <div
        class="line2"
      />
      <div
        class="line3"
      />
    </div>
    <a>
      <h1
        class="header-logo"
        data-testid="title_header"
      >
        Bug Tracker
      </h1>
    </a>
    <div
      class="header-buttons"
    >
      <a>
        login
      </a>
      <a>
        signup
      </a>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Should render Header component with props correctly 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="burger"
    >
      <div
        class="line1"
      />
      <div
        class="line2"
      />
      <div
        class="line3"
      />
    </div>
    <a>
      <h1
        class="header-logo"
        data-testid="title_header"
      >
        Bug Tracker
      </h1>
    </a>
    <div
      class="header-buttons"
    >
      <p
        class="header-buttons__uname"
      >
        User
      </p>
      <button
        class="header-buttons__button"
      >
        Logout
      </button>
    </div>
  </header>
</DocumentFragment>
`;
